Modified css styles

--- a/student.html
+++ b/student.html
@@ -1,5 +1,21 @@
 <html>
 <head>
+<style>
+table, td, th {  
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 15px;
+}
+</style>
+</head>
 <font size =2>
 <h1 align="center"><u>STUDENT DATABASE</u></h1>
 <title>STUDENT DATABASE</title>
